--- a/client/package.json
+++ b/client/package.json
@@ -12,7 +12,9 @@
     "@types/react": "^19.0.8",
     "@types/react-dom": "^19.0.3",
     "axios": "^1.9.0",
+    "bcrypt": "^5.1.1",
     "bootstrap": "^5.3.5",
+    "jsonwebtoken": "^9.0.2",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "react-icons": "^5.4.0",
