--- a/client/package.json
+++ b/client/package.json
@@ -7,6 +7,7 @@
     "@testing-library/jest-dom": "^6.6.3",
     "@testing-library/react": "^16.2.0",
     "@testing-library/user-event": "^13.5.0",
+    "@types/dotenv-safe": "^8.1.6",
     "@types/jest": "^27.5.2",
     "@types/node": "^16.18.126",
     "@types/react": "^19.0.8",
@@ -14,6 +15,9 @@
     "axios": "^1.9.0",
     "bcrypt": "^5.1.1",
     "bootstrap": "^5.3.5",
+    "dotenv": "^16.4.7",
+    "dotenv-safe": "^9.1.0",
+    "env": "^0.0.2",
     "jsonwebtoken": "^9.0.2",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
