--- a/client/package.json
+++ b/client/package.json
@@ -11,8 +11,6 @@
     "@types/dotenv-safe": "^8.1.6",
     "@types/jest": "^27.5.2",
     "@types/node": "^16.18.126",
-    "@types/react": "^19.0.8",
-    "@types/react-dom": "^19.0.3",
     "axios": "^1.9.0",
     "bcrypt": "^5.1.1",
     "bootstrap": "^5.3.5",
@@ -20,8 +18,8 @@
     "dotenv-safe": "^9.1.0",
     "env": "^0.0.2",
     "jsonwebtoken": "^9.0.2",
-    "react": "^19.0.0",
-    "react-dom": "^19.0.0",
+    "react": "^19.1.0",
+    "react-dom": "^19.1.0",
     "react-icons": "^5.4.0",
     "react-router-dom": "^6.30.0",
     "react-scripts": "5.0.1",
@@ -52,5 +50,9 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "@types/react": "^19.1.3",
+    "@types/react-dom": "^19.1.3"
   }
 }
