--- a/client/package.json
+++ b/client/package.json
@@ -18,6 +18,7 @@
     "dotenv-safe": "^9.1.0",
     "env": "^0.0.2",
     "jsonwebtoken": "^9.0.2",
+    "jwt-decode": "^4.0.0",
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
     "react-icons": "^5.4.0",
@@ -52,6 +53,7 @@
     ]
   },
   "devDependencies": {
+    "@types/jwt-decode": "^2.2.1",
     "@types/react": "^19.1.3",
     "@types/react-dom": "^19.1.3"
   }
